# rust-rag-ai

./: Cargo.toml  README.md
data/: llm.md  rag.md  rust.txt
index/: index.json
src/: main.rs
