[package]
name = "rag-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
rayon = "1"
hashbrown = "0.14"

# HTTP client (blocking so we avoid async/tokio complexity)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
